Add RetryDeployment API
