# js/as/external/api/fuotaDeployment_pb.js
@@ -13,6 +13,7 @@ var google_api_annotations_pb = require('../../../google/api/annotations_pb.js')
 var google_protobuf_timestamp_pb = require('google-protobuf/google/protobuf/timestamp_pb.js');
 var google_protobuf_duration_pb = require('google-protobuf/google/protobuf/duration_pb.js');
 var as_external_api_multicastGroup_pb = require('../../../as/external/api/multicastGroup_pb.js');
+var google_protobuf_empty_pb = require('google-protobuf/google/protobuf/empty_pb.js');
 goog.exportSymbol('proto.api.CreateFUOTADeploymentForDeviceRequest', null, global);
 goog.exportSymbol('proto.api.CreateFUOTADeploymentForDeviceResponse', null, global);
 goog.exportSymbol('proto.api.CreateFUOTADeploymentForGroupRequest', null, global);
@@ -29,6 +30,7 @@ goog.exportSymbol('proto.api.ListFUOTADeploymentDevicesRequest', null, global);
 goog.exportSymbol('proto.api.ListFUOTADeploymentDevicesResponse', null, global);
 goog.exportSymbol('proto.api.ListFUOTADeploymentRequest', null, global);
 goog.exportSymbol('proto.api.ListFUOTADeploymentResponse', null, global);
+goog.exportSymbol('proto.api.RetryFUOTADeploymentRequest', null, global);
 
 /**
  * Generated by JsPbCodeGenerator.
@@ -3639,6 +3641,165 @@ proto.api.FUOTADeploymentDeviceListItem.prototype.clearUpdatedAt = function() {
  */
 proto.api.FUOTADeploymentDeviceListItem.prototype.hasUpdatedAt = function() {
   return jspb.Message.getField(this, 6) != null;
+};
+
+
+
+/**
+ * Generated by JsPbCodeGenerator.
+ * @param {Array=} opt_data Optional initial data array, typically from a
+ * server response, or constructed directly in Javascript. The array is used
+ * in place and becomes part of the constructed object. It is not cloned.
+ * If no data is provided, the constructed object will be empty, but still
+ * valid.
+ * @extends {jspb.Message}
+ * @constructor
+ */
+proto.api.RetryFUOTADeploymentRequest = function(opt_data) {
+  jspb.Message.initialize(this, opt_data, 0, -1, null, null);
+};
+goog.inherits(proto.api.RetryFUOTADeploymentRequest, jspb.Message);
+if (goog.DEBUG && !COMPILED) {
+  proto.api.RetryFUOTADeploymentRequest.displayName = 'proto.api.RetryFUOTADeploymentRequest';
+}
+
+
+if (jspb.Message.GENERATE_TO_OBJECT) {
+/**
+ * Creates an object representation of this proto suitable for use in Soy templates.
+ * Field names that are reserved in JavaScript and will be renamed to pb_name.
+ * To access a reserved field use, foo.pb_<name>, eg, foo.pb_default.
+ * For the list of reserved names please see:
+ *     com.google.apps.jspb.JsClassTemplate.JS_RESERVED_WORDS.
+ * @param {boolean=} opt_includeInstance Whether to include the JSPB instance
+ *     for transitional soy proto support: http://goto/soy-param-migration
+ * @return {!Object}
+ */
+proto.api.RetryFUOTADeploymentRequest.prototype.toObject = function(opt_includeInstance) {
+  return proto.api.RetryFUOTADeploymentRequest.toObject(opt_includeInstance, this);
+};
+
+
+/**
+ * Static version of the {@see toObject} method.
+ * @param {boolean|undefined} includeInstance Whether to include the JSPB
+ *     instance for transitional soy proto support:
+ *     http://goto/soy-param-migration
+ * @param {!proto.api.RetryFUOTADeploymentRequest} msg The msg instance to transform.
+ * @return {!Object}
+ */
+proto.api.RetryFUOTADeploymentRequest.toObject = function(includeInstance, msg) {
+  var f, obj = {
+    fuotaDeploymentId: msg.getFuotaDeploymentId()
+  };
+
+  if (includeInstance) {
+    obj.$jspbMessageInstance = msg;
+  }
+  return obj;
+};
+}
+
+
+/**
+ * Deserializes binary data (in protobuf wire format).
+ * @param {jspb.ByteSource} bytes The bytes to deserialize.
+ * @return {!proto.api.RetryFUOTADeploymentRequest}
+ */
+proto.api.RetryFUOTADeploymentRequest.deserializeBinary = function(bytes) {
+  var reader = new jspb.BinaryReader(bytes);
+  var msg = new proto.api.RetryFUOTADeploymentRequest;
+  return proto.api.RetryFUOTADeploymentRequest.deserializeBinaryFromReader(msg, reader);
+};
+
+
+/**
+ * Deserializes binary data (in protobuf wire format) from the
+ * given reader into the given message object.
+ * @param {!proto.api.RetryFUOTADeploymentRequest} msg The message object to deserialize into.
+ * @param {!jspb.BinaryReader} reader The BinaryReader to use.
+ * @return {!proto.api.RetryFUOTADeploymentRequest}
+ */
+proto.api.RetryFUOTADeploymentRequest.deserializeBinaryFromReader = function(msg, reader) {
+  while (reader.nextField()) {
+    if (reader.isEndGroup()) {
+      break;
+    }
+    var field = reader.getFieldNumber();
+    switch (field) {
+    case 1:
+      var value = /** @type {string} */ (reader.readString());
+      msg.setFuotaDeploymentId(value);
+      break;
+    default:
+      reader.skipField();
+      break;
+    }
+  }
+  return msg;
+};
+
+
+/**
+ * Class method variant: serializes the given message to binary data
+ * (in protobuf wire format), writing to the given BinaryWriter.
+ * @param {!proto.api.RetryFUOTADeploymentRequest} message
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.RetryFUOTADeploymentRequest.serializeBinaryToWriter = function(message, writer) {
+  message.serializeBinaryToWriter(writer);
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format).
+ * @return {!Uint8Array}
+ */
+proto.api.RetryFUOTADeploymentRequest.prototype.serializeBinary = function() {
+  var writer = new jspb.BinaryWriter();
+  this.serializeBinaryToWriter(writer);
+  return writer.getResultBuffer();
+};
+
+
+/**
+ * Serializes the message to binary data (in protobuf wire format),
+ * writing to the given BinaryWriter.
+ * @param {!jspb.BinaryWriter} writer
+ */
+proto.api.RetryFUOTADeploymentRequest.prototype.serializeBinaryToWriter = function (writer) {
+  var f = undefined;
+  f = this.getFuotaDeploymentId();
+  if (f.length > 0) {
+    writer.writeString(
+      1,
+      f
+    );
+  }
+};
+
+
+/**
+ * Creates a deep clone of this proto. No data is shared with the original.
+ * @return {!proto.api.RetryFUOTADeploymentRequest} The clone.
+ */
+proto.api.RetryFUOTADeploymentRequest.prototype.cloneMessage = function() {
+  return /** @type {!proto.api.RetryFUOTADeploymentRequest} */ (jspb.Message.cloneMessage(this));
+};
+
+
+/**
+ * optional string fuota_deployment_id = 1;
+ * @return {string}
+ */
+proto.api.RetryFUOTADeploymentRequest.prototype.getFuotaDeploymentId = function() {
+  return /** @type {string} */ (jspb.Message.getFieldProto3(this, 1, ""));
+};
+
+
+/** @param {string} value  */
+proto.api.RetryFUOTADeploymentRequest.prototype.setFuotaDeploymentId = function(value) {
+  jspb.Message.setField(this, 1, value);
 };
 
 
